# simple-rag

./: .gitignore  README.md  app.py  app_standard.py  index_documents.py  main.py  pyproject.toml  test_app.py
output/Top-AI-Use-Cases-For-Accounts-Receivable-Automation-In-2025/: chunk_1.md  chunk_10.md  chunk_11.md  chunk_12.md  chunk_13.md  chunk_14.md  chunk_15.md  chunk_16.md  chunk_17.md  chunk_18.md  chunk_19.md  chunk_2.md  chunk_20.md  chunk_3.md  chunk_4.md  chunk_5.md  chunk_6.md  chunk_7.md  chunk_8.md  chunk_9.md  embeddings.json
