[project]
name = "simple-rag"
version = "0.1.0"
description = "Document to Markdown converter with Hebrew RTL support, chunking strategies, and Gemini embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "pdfplumber>=0.11.7",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]

[project.scripts]
simple-rag = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
